--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     
     <meta charset="UTF-8">
     <title>TRINITY</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/demo-index.css">
     <link rel="icon" sizes="192x192" href="icon.png">
@@ -56,19 +56,25 @@
 
 
         <div class="social-buttons">
-            <a href="https://www.facebook.com/trinitycyberforum" target="_blank" class="social-button facebook" style="left: 0px; top: -1px;"><i class="fa fa-facebook" style="width: 22px; margin-left: -5px; margin-top: 29px;"></i></a>
+            <a href="https://www.facebook.com/ipectrinity" target="_blank" class="social-button facebook" style="left: 0px; top: -1px;">
+              <i class="fa fa-facebook" style="width: 22px; margin-left: -5px; margin-top: 29px;"></i></a>
 
-            <a href="mailto:code4trinity@gmail.com" target="_blank" class="social-button google"><i class="fa fa-google" style="margin-left: 1px; margin-top: 29px;"></i></a>
-            <a href="https://www.instagram.com/trinitycyberforum/" target="_blank" class="social-button dribbble" style="pointer-events: auto;"><i class="fa fa-instagram" style="width: 22px; margin-left: -5px; margin-top: 25px;"></i></a>
+            <a href="https://www.instagram.com/ipectrinity" target="_blank" class="social-button dribbble">
+              <i class="fa fa-instagram" style="width: 25px; margin-left: -5px; margin-top: 25px;"></i></a>
 
+            <a href="https://twitter.com/ipectrinity" target="_blank" class="social-button twitter">
+              <i class="fa fa-twitter" style="width: 25px; margin-left: -5px; margin-top: 25px;"></i></a>
 
+            <a href="mailto:code4trinity@gmail.com" target="_blank" class="social-button google">
+              <i class="fa fa-envelope" style="width: 25px; margin-left: -10px; margin-top: 25px;"></i></a>
+              
         </div>
+
     </div>
 <div><header class="codrops-header" style="pointer-events: auto;">
 <img  src="logoface2.png">
-                        <h1 ><span >Cyber Forum</span> TRINITY <i>Dedicated to promoting interest in computing and
-information technologies among members of the
-Inderprastha community
+                        <h1>TRINITY<i>Dedicated to promoting interest in computing and
+information technologies among members of the IPEC community
 
 <!--
 <div class="container">
